Refactored code & added enter to search functionality

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,6 +26,7 @@
     -->
     <title>React App</title>
     <link href="http://fonts.cdnfonts.com/css/pokemon-hollow" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/david-sans" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
